--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -32,66 +32,93 @@
             <div id = "img-cards">
             
                 <div class = "card">
-                    <img src="./group_image/name1">
+                    <img src="./group_image/name1" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
+                        <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                         <p>設計師</p>
+                        <div style = "display:none">
+                            <p>技能</p><br>
+                            <p>介紹</p>
+                        </div>
                     </div>
                 </div>
                 
                 <div class = "card">
-                    <img src="./group_image/name2">
+                    <img src="./group_image/name1" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
+                        <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                         <p>設計師</p>
+                        <div style = "display:none">
+                            <p>技能</p><br>
+                            <p>介紹</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class = "card">
-                    <img src="./group_image/name3">
+                    <img src="./group_image/name1" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
+                        <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                         <p>設計師</p>
+                        <div style = "display:none">
+                            <p>技能</p><br>
+                            <p>介紹</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class = "card">
-                    <img src="./group_image/name4">
+                    <img src="./group_image/name1" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
+                        <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                         <p>設計師</p>
+                        <div style = "display:none">
+                            <p>技能</p><br>
+                            <p>介紹</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class = "card">
-                    <img src="./group_image/name5">
+                    <img src="./group_image/name1" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
+                        <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                         <p>設計師</p>
+                        <div style = "display:none">
+                            <p>技能</p><br>
+                            <p>介紹</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class = "card">
-                    <img src="./group_image/name6">
+                    <img src="./group_image/name1" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
+                        <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                         <p>設計師</p>
+                        <div style = "display:none">
+                            <p>技能</p><br>
+                            <p>介紹</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class = "card">
-                    <img src="./group_image/name7">
+                    <img src="./group_image/name1" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
+                        <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                         <p>設計師</p>
+                        <div style = "display:none">
+                            <p>技能</p><br>
+                            <p>介紹</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class = "card">
-                    <img src="./group_image/name1">
+                    <img src="./group_image/logo or something else" class = "personal-img">
                     <div class = "card-detail"> <!--we could set the background color here-->
-                        <p>name1</p><br><!-- we should wait till the designers to give us the font size of this-->
-                        <p>設計師</p>
+                        <p class = "personal-name">CONNECT</p><br>
                     </div>
                 </div>
 
