fix little things

--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -25,7 +25,7 @@
             </ul>
         </div>
 
-        <div id = "group-img"></div> <!-- backrground group image-->
+        <div id = "group-img" src = "./file/groupphoto_1.jpg"></div> <!-- backrground group image-->
 
         <div id = "about-details"> <!-- details each person-->
         <h1>About us.</h1>
