fix little things

--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -34,7 +34,7 @@
         <div id = "img-cards">
         
             <div class = "card">
-                <img src="./file/about_us/name1" class = "personal-img">
+                <img src="./file/name1.jpg" class = "personal-img">
                 <div class = "card-detail"> <!--we could set the background color here-->
                     <p class = "personal-name">name1</p><br><!-- we should wait till the designers to give us the font size of this-->
                     <p>設計師</p>
