modify img & text margin, set cards position

--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -45,13 +45,14 @@
         
             <div id = "gap1"></div>
             <h1>about us.</h1>
-            <p>(about us, our vision, still having no clue about this)</p>
+            <p id = "slogan">(團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)</p>
 
             <div id = "flex-column">
 
                 <div class = "flex-row">
-                    <div class = "card">
-                        <img src="./file/name1.jpg" class = "personal-img">
+                    <div id = "c1" class = "card">
+                        <div id = "personal_pic1"></div>
+                        <div class = "card-bg"></div>
                         <div class = "card-detail"> <!--we could set the background color here-->
                             <p class = "personal-name">張仲喆</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">工程師</p>
@@ -140,7 +141,8 @@
                     </div>
                 </div>
             </div>
-
+            
+            <div id = "gap2"></div>
         </div>
 
  
