js:add button animation, css:modify few position to match design

--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -16,17 +16,17 @@
 
     <header>
         <div id = "navbar"> <!--navigation bar-->
-            <div id="title">CONNECT.</div>
+            <div id = "title">CONNECT.</div>
 
             <ul>
                 <li>
-                    <a href="#">home</a>
+                    <a class = "button" href="#">home</a>
                 </li>
                 <li>
-                    <a href="#">activity</a>
+                    <a class = "button" href="#">activity</a>
                 </li>
                 <li>
-                    <a href="#">about us</a>
+                    <a class = "button" href="#">about us</a>
                 </li>
             </ul>
         </div>
@@ -57,8 +57,12 @@
                             <p class = "personal-name">張仲喆</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">工程師</p>
                             <div style = "display:none">
-                                <p class = "description">技能</p>
-                                <p class = "description">介紹</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">技能：c, c++</p>
+                                <p class = "description">系所：電機系111</p>
+                                <p class = "description">興趣：修東西, 打桌球，打code</p>
                             </div>
                         </div>
                     </div>
