--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -36,7 +36,9 @@
     <body>
         <div id = "background"></div>
 
-        <div id = "group-img"></div> <!-- backrground group image-->
+        <div> <!-- backrground group image-->
+            <img id = "group-img" src = "./file/groupphoto_1.png">
+        </div>
 
         <div id = "about-details"> <!-- details each person-->
         
@@ -69,7 +71,7 @@
                     
 
                     <div class = "card">
-                        <div class = "personal_pic"></div>
+                        <img class = "personal_pic" src = "./file/name2_1.png">
                         <div class = "card-bg"></div>
                         <div class = "card-detail"> <!--we could set the background color here-->
                             <p class = "personal-name">蔡孟芩</p><!-- we should wait till the designers to give us the font size of this-->
