--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -47,8 +47,9 @@
         
             <div id = "gap1"></div>
             <h1>about us.</h1>
-            <p id = "slogan">(團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)(about us, our vision, still having no clue about this)</p>
-
+            <p id = "slogan">(團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......)(about us, our vision, still having no clue about this)
+            </p>
+            <div id = "gap2"></div>
             <div id = "flex-column">
 
                 <div class = "flex-row">
@@ -154,7 +155,7 @@
                 </div>
             </div>
             
-            <div id = "gap2"></div>
+            <div id = "gap3"></div>
         </div>
 
  
