--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -47,7 +47,7 @@
         
             <div id = "gap1"></div>
             <h1>about us.</h1>
-            <p id = "slogan">(團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......團隊簡介.......)(about us, our vision, still having no clue about this)
+            <p id = "slogan">我們是一群由成功大學電機系、工設系、不分系和外文系的學生所組成的一個團隊，目標是在這學期結束前架構出一個專門為大學生設計的社群網站 - CONNECT，讓大學生們可以在學校裡更容易找到志同道合的夥伴共事
             </p>
             <div id = "gap2"></div>
             <div id = "flex-column">
