--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -78,8 +78,11 @@
                             <p class = "personal-name">蔡孟芩</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">設計師</p>
                             <div style = "display:none">
-                                <p class = "description">技能</p>
-                                <p class = "description">介紹</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">技能：英文, 德文, 翻譯</p>
+                                <p class = "description">系所：外文系110</p>
+                                <p class = "description">興趣：學習語言, 寫詞編曲, 烘焙</p>
                             </div>
                         </div>
                     </div>
@@ -91,8 +94,11 @@
                             <p class = "personal-name">陳亮州</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">工程師</p>
                             <div style = "display:none">
-                                <p class = "description">技能</p>
-                                <p class = "description">介紹</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">技能：Java, C, C++, Python</p>
+                                <p class = "description">系所：電機系111</p>
+                                <p class = "description">興趣：聽音樂, 看電影，打code</p>
                             </div>
                         </div>
                     </div>
@@ -104,8 +110,11 @@
                             <p class = "personal-name">鄭有希</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">設計師</p>
                             <div style = "display:none">
-                                <p class = "description">技能</p>
-                                <p class = "description">介紹</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">技能：ps, ai, pr, solidworks</p>
+                                <p class = "description">系所：工設110</p>
+                                <p class = "description">興趣：看小說, 打排球, 彈吉他</p>
                             </div>
                         </div>
                     </div>
@@ -120,8 +129,12 @@
                             <p class = "personal-name">鄭价閎</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">工程師</p>
                             <div style = "display:none">
-                                <p class = "description">技能</p>
-                                <p class = "description">介紹</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">技能：Java, C</p>
+                                <p class = "description">系所：電機系111</p>
+                                <p class = "description">興趣：球類, 手遊, 漫畫, 魔方</p>
                             </div>
                         </div>
                     </div>
@@ -133,8 +146,11 @@
                             <p class = "personal-name">蕭孟恩</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">設計師</p>
                             <div style = "display:none">
-                                <p class = "description">技能</p>
-                                <p class = "description">介紹</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">技能：Ai, ID, Miro, Figma</p>
+                                <p class = "description">系所：不分系110</p>
+                                <p class = "description">興趣：科幻電影, 獨立音樂</p>
                             </div>
                         </div>
                     </div>
@@ -147,8 +163,12 @@
                             <p class = "personal-name">林雯琪</p><!-- we should wait till the designers to give us the font size of this-->
                             <p class = "description">工程師</p>
                             <div style = "display:none">
-                                <p class = "description">技能</p>
-                                <p class = "description">介紹</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">.</p>
+                                <p class = "description">技能：C++, Python</p>
+                                <p class = "description">系所：電機系111</p>
+                                <p class = "description">興趣：聽音樂, 打遊戲</p>
                             </div>
                         </div>
                     </div>
