modified: about_us.html, fix comma problem

--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -65,7 +65,7 @@
                                 <p class = "description">.</p>
                                 <p class = "description">技能：c, c++</p>
                                 <p class = "description">系所：電機系111</p>
-                                <p class = "description">興趣：修東西, 打桌球，打code</p>
+                                <p class = "description">興趣：修東西, 打桌球, 打code</p>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                 <p class = "description">.</p>
                                 <p class = "description">技能：Java, C, C++, Python</p>
                                 <p class = "description">系所：電機系111</p>
-                                <p class = "description">興趣：聽音樂, 看電影，打code</p>
+                                <p class = "description">興趣：聽音樂, 看電影, 打code</p>
                             </div>
                         </div>
                     </div>
