--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -63,9 +63,9 @@
                                 <p class = "description">.</p>
                                 <p class = "description">.</p>
                                 <p class = "description">.</p>
-                                <p class = "description">技能：c, c++</p>
+                                <p class = "description">技能：c, c++, lr</p>
                                 <p class = "description">系所：電機系111</p>
-                                <p class = "description">興趣：修東西, 打桌球, 打code</p>
+                                <p class = "description">興趣：攝影, 打桌球, 打code, 彈吉他</p>
                             </div>
                         </div>
                     </div>
